--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,1 +1,6 @@
-<p>button works!</p>
+<div class="container">
+  <div class="content">
+    <div class="score">{{score}}</div>
+    <button class="cookie" (click)="clickedButton()"> </button>
+  </div>
+</div>
