--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="content">
-    <div class="score">{{score}}</div>
+    <div class="score">{{statsService.getScore()}}</div>
     <button class="cookie" (click)="clickedButton()"> </button>
   </div>
 </div>
