--- a/src/app/button/button.component.css
+++ b/src/app/button/button.component.css
@@ -1,5 +1,4 @@
 .cookie {
-  background-color: orange;
   border: none;
   color: white;
   padding: 20px;
@@ -12,6 +11,8 @@
   width: 150px;
   height: 150px;
   margin-top: 100%;
+  background-image: url("src/app/button/Images/virus-2ndleve-150x150.png");
+  background-color: #2d2d2d;
 }
 
 .cookie:hover {
